<resources>
    <string name="app_name">뮤엠 성성자이NEST</string>

    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="restore">복원</string>

    <string name="select_picture">사진 선택</string>

    <!--alerts-->
    <string name="alert_custom_messages_set">메세지가 적용되었습니다.</string>

    <!--dialog messages-->
    <string name="departure_message">하원 메세지</string>
    <string name="arrival_message">등원 메세지</string>
    <string name="howto_edit_messages">사용법: \n아이의 이름이 들어갈 곳에 ㅇㅇㅇ를 써주세요.\n\n</string>
    <string name="default_arrival">★ 뮤엠성성자이NEST공부방 안심 출결 ★\n ㅇㅇㅇ 학생이 학원에\n 안전하게 등원하였습니다.</string>
    <string name="default_departure">★ 뮤엠성성자이NEST공부방 안심 출결 ★\n ㅇㅇㅇ 학생이 학원에서\n 안전하게 하원하였습니다.</string>


    <!--message dialog-->
    <string name="arrival">등원</string>
    <string name="departure">하원</string>
    <string name="absent">결석</string>

    <!--menu-->
    <string name="logout">로그아웃</string>
    <string name="edit_messages">메세지 편집</string>
    <string name="announcement">공지사항</string>
    <string name="analysis">출결현황</string>
    <string name="excel">엑셀 다운받기</string>

    <!--addstudentdialog-->
    <string name="name">이름</string>
    <string name="phone_number">전화번호</string>
    <string name="email">이메일</string>
    <string name="section">섹션</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="add_student">학생 등록</string>
    <string name="edit_student">학생 편집</string>
    <string name="enter_name">이름을 입력해 주세요.</string>
    <string name="enter_number">전화번호를 입력해 주세요.</string>
    <string name="select_section">섹션을 선택해 주세요.</string>

    <!--classes-->
    <string-array name="classes">
        <item>1교시</item>
        <item>2교시</item>
        <item>3교시</item>
        <item>4교시</item>
        <item>5교시</item>
    </string-array>

    <!--spinner class name drop down-->
    <string-array name="spinner_dropdown">
        <item>섹션 선택</item>
        <item>1교시</item>
        <item>2교시</item>
        <item>3교시</item>
        <item>4교시</item>
        <item>5교시</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="class1">1교시</string>-->
    <!--<string name="class2">2교시</string>-->
    <!--<string name="class3">3교시</string>-->
    <!--<string name="class4">4교시</string>-->
    <!--<string name="class5">5교시</string>-->

    <!--announcement-->
    <string name="howto_announcement">내용</string>
    <string name="enter_message">메세지를 입력해 주세요.</string>
    <string name="select_recipient">수신인을 선택해 주세요.</string>
    <string-array name="spinner_to_dropdown">
        <item>수령인 선택</item>
        <item>전체</item>
        <item>1교시</item>
        <item>2교시</item>
        <item>3교시</item>
        <item>4교시</item>
        <item>5교시</item>
        <item>개별 선택</item>
    </string-array>
    <string name="announcement_pre">◆ 뮤엠성성자이NEST 공지사항 ◆\n</string>


</resources>
