<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/material_design_padding"
    android:paddingLeft="@dimen/material_design_padding"
    android:paddingRight="@dimen/material_design_padding"
    android:paddingTop="@dimen/material_design_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/howto_edit_messages"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arrival_message" />

    <EditText
        android:id="@+id/arrived_message"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:lines="5"
        android:minLines="5"
        android:maxLines="5"
        android:maxLength="100"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:scrollbars="vertical"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/departure_message" />


    <EditText
        android:id="@+id/left_message"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:lines="5"
        android:minLines="5"
        android:maxLines="5"
        android:maxLength="100"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:scrollbars="vertical"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restore"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_restore_message"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_custom_message"/>
    </LinearLayout>
</LinearLayout>
