<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/material_design_padding"
    android:orientation="vertical">
    
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/material_design_padding"
        android:id="@+id/spinner_to">

    </Spinner>

    <com.wootae.mumsungsungxi.MultiSelectionSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_multi_to"
        android:paddingBottom="@dimen/material_design_padding"
        android:prompt="@string/select_recipient">

    </com.wootae.mumsungsungxi.MultiSelectionSpinner>
    <!--android:layout_margin="2dp"-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/howto_announcement" />

    <EditText
        android:id="@+id/et_announcement"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:lines="5"
        android:minLines="5"
        android:maxLines="5"
        android:maxLength="100"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:paddingBottom="@dimen/material_design_padding"
        android:scrollbars="vertical">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirm"
            android:text="@string/confirm"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>