<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/material_design_padding"
    android:paddingLeft="@dimen/material_design_padding"
    android:paddingRight="@dimen/material_design_padding"
    android:paddingTop="@dimen/material_design_padding">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_marginBottom="3dp"
        android:background="@color/attended"
        android:textColor="#FFFFFF"
        android:text="@string/arrival" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_marginBottom="3dp"
        android:background="@color/departed"
        android:textColor="#FFFFFF"
        android:text="@string/departure" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="50sp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@color/absent"
        android:textColor="#FFFFFF"
        android:text="@string/absent" />


</LinearLayout>